--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Bienvenido a la página web del estudio fotográfico</h1>
-<h2>Esta es la página web donde podrás ver nuestros trabajos</h2>
+<p>Esta es la página web donde podrás ver nuestros trabajos</p>
 	
 </body>
 </html>
