--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>Bienvenido a la página web del estudio fotográfico</h1>
-<p>Esta es la página web donde podrás ver nuestros trabajos</p>
+<p>Esta es la página web donde podrás ver nuestros trabajos &#169;</p>
 	
 </body>
 </html>
