Modificado el título
más bonito

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<title>Estudio fotográfico</title>
+	<title>Estudio fotográfico Fantástico</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
